examples/test/testpolicy8158.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8158
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key20: value27
      key15: value43
      key18: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value7
      podSelector:
        matchLabels:
          key13: value46
          key2: value21
          key23: value16
